Changelog
=========

1.0 (unreleased)
----------------

- Change SiteMembers.pwreset() to correctly use userid, not login name
  when interacting with PlonePAS user management plugin. [seanupton]


0.9 (2013-12-16)
----------------

- Updated to use of UUID-based group names. [seanupton]

- Various updates to make group configuration management
  pluggable.
  [seanupton]

- Moved source from uu.qiext to collective.teamwork
  [seanupton]


